create: creating bithrights area

--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -43,7 +43,7 @@
           {{/each}}
         </select>
       </div>
-      <button>Add Birthright</button>
+      <button data-action="button-birthright-type">Add Birthright</button>
     </div>
   </section>
 </div>
