create: creating area from boons inside of relic

--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -46,10 +46,11 @@
                 ></textarea>
                 {{#if (hasOwnProperty birthright "boons")}}
                 <div class="boons-area">
+                  <span>Boons:</span>
                   <ul>
                     <li>
-                      <input type="text" />
-                      <input type="text" />
+                      <input type="text" placeholder="Boon name" />
+                      <input type="text" placeholder="Level" />
                     </li>
                   </ul>
                 </div>
