--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -81,6 +81,7 @@
       <a class="item" data-group="primary" data-tab="birth"
         >Birthrights & Virtues</a
       >
+      <a class="item" data-group="primary" data-tab="knacks">Knacks & Boons</a>
     </nav>
     <section class="sheet-content">
       <div class="tab active" data-group="primary" data-tab="stats">
@@ -89,6 +90,10 @@
       <div class="tab" data-group="primary" data-tab="birth">
         {{>
         "systems/scion-hero-foundry/templates/actors/partials/birth-virtues.html"}}
+      </div>
+      <div class="tab" data-group="primary" data-tab="knacks">
+        {{>
+        "systems/scion-hero-foundry/templates/actors/partials/knacks-boons.html"}}
       </div>
     </section>
   </form>
