--- a/templates/actors/partials/knacks-boons.html
+++ b/templates/actors/partials/knacks-boons.html
@@ -6,8 +6,8 @@
     <div class="knack-list">
       <ul>
         <li>
-          <input type="text" name="" id="" />
-          <textarea name="" id=""></textarea>
+          <input type="text" name="" id="" placeholder="Knack" />
+          <textarea name="" id="" placeholder="Description"></textarea>
         </li>
       </ul>
     </div>
@@ -18,5 +18,11 @@
   <div class="scion-label-title">
     <h2>Boons</h2>
   </div>
-  <div class="boons-wrapper"></div>
+  <div class="boons-wrapper">
+    <div class="boons">
+      <ul class="boon-list">
+        <li></li>
+      </ul>
+    </div>
+  </div>
 </div>
