create: creating area from knacks and boons

--- a/templates/actors/partials/knacks-boons.html
+++ b/templates/actors/partials/knacks-boons.html
@@ -21,8 +21,30 @@
   <div class="boons-wrapper">
     <div class="boons">
       <ul class="boon-list">
-        <li></li>
+        <li>
+          <div class="boom-name-level">
+            <div class="boon-name">
+              <input type="text" name="" id="" placeholder="Boon name" />
+            </div>
+            <div class="boon-level">
+              <span>level:</span
+              ><input type="text" name="" id="" placeholder="Boon level" />
+            </div>
+          </div>
+          <div class="boon-dice-pool">
+            <span>Dice pool:</span>
+            <input type="text" name="" id="" placeholder="Dice pool" />
+          </div>
+          <div class="boon-cost">
+            <span>cost:</span>
+            <input type="text" name="" id="" placeholder="Boon cost" />
+          </div>
+          <div class="boon-description">
+            <textarea name="" id="" placeholder="Description"></textarea>
+          </div>
+        </li>
       </ul>
     </div>
+    <button>Add Boon</button>
   </div>
 </div>
