--- a/styles/partials/knacks-boons.css
+++ b/styles/partials/knacks-boons.css
@@ -12,10 +12,27 @@
 
 .knacks-wrapper > button:focus,
 .knacks-wrapper > button:hover,
+.boons-wrapper > button:focus,
+.boons-wrapper > button:hover,
 .knacks-wrapper > .knack-list > ul > li > input[type="text"]:focus,
 .knacks-wrapper > .knack-list > ul > li > input[type="text"]:hover,
 .knacks-wrapper > .knack-list > ul > li > textarea:focus,
-.knacks-wrapper > .knack-list > ul > li > textarea:hover {
+.knacks-wrapper > .knack-list > ul > li > textarea:hover,
+.boom-name-level > .boon-name > input[type="text"]:focus,
+.boom-name-level > .boon-level > input[type="text"]:focus,
+.boon-description > textarea:focus,
+.boons-wrapper
+  > .boons
+  > .boon-list
+  > li
+  > .boon-cost
+  > input[type="text"]:focus,
+.boons-wrapper
+  > .boons
+  > .boon-list
+  > li
+  > .boon-dice-pool
+  > input[type="text"]:focus {
   box-shadow: none;
 }
 
@@ -36,7 +53,8 @@
   padding: 0 0px;
 }
 
-.knacks-wrapper > .knack-list > ul > li > textarea {
+.knacks-wrapper > .knack-list > ul > li > textarea,
+.boon-description > textarea {
   height: 100px;
   min-height: 50px;
   max-height: 200px;
@@ -46,13 +64,65 @@
   padding: 10px;
 }
 
-.knacks-wrapper > .knack-list > ul > li > input[type="text"] {
+.knacks-wrapper > .knack-list > ul > li > input[type="text"],
+.boom-name-level > .boon-name > input[type="text"],
+.boom-name-level > .boon-level > input[type="text"],
+.boons-wrapper > .boons > .boon-list > li > .boon-cost > input[type="text"],
+.boons-wrapper
+  > .boons
+  > .boon-list
+  > li
+  > .boon-dice-pool
+  > input[type="text"] {
   padding: 10px;
   font-family: skranji-regular, sans-serif !important;
   text-transform: capitalize;
 }
 
-.knacks-wrapper > button {
+.knacks-wrapper > button,
+.boons-wrapper > button {
   font-family: skranji-regular, sans-serif !important;
   text-transform: uppercase;
+}
+
+.boons-wrapper > .boons > .boon-list > li {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.65rem;
+  cursor: auto;
+}
+
+.boons-wrapper > .boons > .boon-list > li > .boom-name-level {
+  display: flex;
+  width: 100%;
+  gap: 0.65rem;
+}
+
+.boons-wrapper > .boons > .boon-list > li > .boom-name-level > .boon-name,
+.boons-wrapper > .boons > .boon-list > li > .boom-name-level > .boon-level {
+  width: 100%;
+}
+
+.boon-level,
+.boon-cost,
+.boon-dice-pool {
+  width: 100%;
+  display: flex;
+  gap: 0.5rem;
+  text-transform: capitalize;
+}
+
+.boon-level > span,
+.boon-dice-pool > span {
+  text-transform: capitalize;
+}
+
+.boons-wrapper
+  > .boons
+  > .boon-list
+  > li
+  > .boon-dice-pool
+  > input[type="text"] {
+  width: 30rem;
 }
