create: creating boon area

--- a/templates/actors/partials/knacks-boons.html
+++ b/templates/actors/partials/knacks-boons.html
@@ -11,7 +11,7 @@
         </li>
       </ul>
     </div>
-    <button>Add Knack</button>
+    <button data-action="button-knack-add">Add Knack</button>
   </div>
 </div>
 <div class="boons">
@@ -45,6 +45,6 @@
         </li>
       </ul>
     </div>
-    <button>Add Boon</button>
+    <button data-action="button-boon-add">Add Boon</button>
   </div>
 </div>
