--- a/styles/journals/purview.css
+++ b/styles/journals/purview.css
@@ -2,10 +2,7 @@
   display: none;
 }
 
-.purview-journal-entry-content
-  > .journal-entry-pages
-  > .scrollable
-  > .journal-entry-page {
+.purview-journal-entry-content > .journal-entry-pages > .journal-entry-page {
   margin-top: 20px;
   background: rgba(254, 254, 254, 255);
   border-radius: 5px;
@@ -14,9 +11,8 @@
 
 .purview-journal-entry-content
   > .journal-entry-pages
-  > .scrollable
-  > .journal-entry-page
-  > .journal-page-header {
+  > .journal-entry-page:has(header.journal-page-header)
+  header.journal-page-header {
   margin: 0 0 23px 0;
   background-image: url(../../assets/png/band-small.png);
   background-position: center center;
@@ -31,10 +27,9 @@
 
 .purview-journal-entry-content
   > .journal-entry-pages
-  > .scrollable
-  > .journal-entry-page
-  > .journal-page-header
-  > h1 {
+  > .journal-entry-page:has(header.journal-page-header)
+  header.journal-page-header
+  h1 {
   font-family: skranji-bold, sans-serif;
   font-size: 1.5rem;
   margin: 0;
@@ -60,11 +55,13 @@
   position: relative;
   font-family: skranji-regular, sans-serif !important;
   font-size: medium;
+  color: #222;
 }
 
 .purviews-section > h2 {
   font-family: skranji-bold, sans-serif;
   font-size: 1.75em;
+  color: #222;
 }
 
 .purviews-wrapper,
@@ -85,6 +82,11 @@
 
 .purview-item {
   gap: 0.5rem;
+}
+
+.purview-item h3 {
+  font-family: skranji-bold, sans-serif;
+  color: #222;
 }
 
 .boon-list {
@@ -164,6 +166,10 @@
 
 .purview-table {
   background: rgb(248, 248, 255);
+}
+
+.purview-table > thead > tr > th {
+  color: rgb(248, 248, 255);
 }
 
 .purview-table > thead > tr > th,
