--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -8,6 +8,13 @@
         {{#each system.birthrights as |birthright index|}}
         <li>
           <div class="birthright-input-area" data-index="{{index}}">
+            <button
+              class="delete-button"
+              data-action="delete-birthright"
+              data-birth-id="{{birthright._id}}"
+            >
+              <i class="fa-solid fa-trash"></i>
+            </button>
             <div class="row">
               <div class="birthright-name">
                 <input
@@ -71,6 +78,13 @@
                         data-action="update-birthright-boon"
                         placeholder="Level"
                       />
+                      <button
+                        class="delete-button"
+                        data-birth-id="{{birthright._id}}"
+                        data-boon-id="{{boon._id}}"
+                      >
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
                     </li>
                     {{/each}}
                   </ul>
