update: updating method to create actor

--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -80,6 +80,7 @@
                       />
                       <button
                         class="delete-button"
+                        data-action="delete-birth-boon"
                         data-birth-id="{{birthright._id}}"
                         data-boon-id="{{boon._id}}"
                       >
