--- a/templates/actors/partials/knacks-boons.html
+++ b/templates/actors/partials/knacks-boons.html
@@ -18,6 +18,9 @@
             data-index="{{index}}"
             placeholder="Description"
           ></textarea>
+          <button class="delete-button">
+            <i class="fa-solid fa-trash"></i>
+          </button>
         </li>
         {{/each}}
       </ul>
@@ -79,6 +82,9 @@
               placeholder="Description"
             ></textarea>
           </div>
+          <button class="delete-button">
+            <i class="fa-solid fa-trash"></i>
+          </button>
         </li>
         {{/each}}
       </ul>
