update: updating method to create actor

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -84,6 +84,7 @@
         >Birthrights & Virtues</a
       >
       <a class="item" data-group="primary" data-tab="knacks">Knacks & Boons</a>
+      <a class="item" data-group="primary" data-tab="combat">Combat</a>
     </nav>
     <section class="sheet-content">
       <div class="tab active" data-group="primary" data-tab="stats">
@@ -96,6 +97,10 @@
       <div class="tab" data-group="primary" data-tab="knacks">
         {{>
         "systems/scion-hero-foundry/templates/actors/partials/knacks-boons.html"}}
+      </div>
+      <div class="tab" data-group="primary" data-tab="combat">
+        {{>
+        "systems/scion-hero-foundry/templates/actors/partials/combat.html"}}
       </div>
     </section>
   </form>
