--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -11,18 +11,40 @@
           <input type="text" placeholder="Weapon name" />
         </div>
         <div class="weapon-specs">
-          <div class="attr-skiil"></div>
-          <div class="weapon-stats"></div>
+          <div class="attr-skill">
+            <select name="" id="">
+              <option value="">Attr</option>
+            </select>
+            <select name="" id="">
+              <option value="">Skills</option>
+            </select>
+          </div>
+          <div class="weapon-stats">
+            <input type="text" placeholder="Speed" />
+            <input type="text" placeholder="Accuracy" />
+            <input type="text" placeholder="Defense" />
+            <input type="text" placeholder="Range" />
+          </div>
         </div>
         <div class="damage-info">
           <div class="damage">
             <input type="text" placeholder="Damage value" />
           </div>
-          <div class="damage-attr"></div>
+          <div class="damage-attr">
+            <select name="" id="">
+              <option value="">Attr</option>
+            </select>
+            <select name="" id="">
+              <option value="">Type</option>
+            </select>
+          </div>
         </div>
+        <button class="delete-button">
+          <i class="fa-solid fa-trash"></i>
+        </button>
       </li>
     </ul>
-    <button>Add weapon</button>
+    <button class="add-weapon">Add weapon</button>
   </div>
 </div>
 <div class="willpower-legend">
