--- a/styles/scion-hero.css
+++ b/styles/scion-hero.css
@@ -35,6 +35,16 @@
   font-weight: normal;
 }
 
+input[type="text"]:focus,
+input[type="text"]:hover,
+button:focus,
+button:hover,
+textarea:focus,
+textarea:hover {
+  box-shadow: none;
+  outline: none;
+}
+
 .scion-wrapper {
   width: 100%;
   height: auto;
