create: adding method to control knacks and boons

--- a/styles/partials/combat.css
+++ b/styles/partials/combat.css
@@ -95,3 +95,27 @@
 .damage input[type="text"] {
   width: 10rem;
 }
+
+.willpower-legend-wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  gap: 0.6rem;
+  padding: 0 10px;
+}
+
+.willpower,
+.legend {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.willpower .points {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 0.5rem;
+}
