create: creating method to control willpoint and legend points

--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -62,7 +62,7 @@
           <input
             type="checkbox"
             class="circle-checkbox"
-            data-target="willpower.{{i}}.value"
+            data-target="willpower.value"
             value="{{i}}"
           />
           {{/each}}
@@ -73,7 +73,7 @@
           <input
             type="checkbox"
             class="square-checkbox"
-            data-target="willpowerPoints.{{i}}.value"
+            data-target="willpowerPoints.value"
             value="{{i}}"
           />
           {{/each}}
@@ -90,7 +90,7 @@
           <input
             type="checkbox"
             class="circle-checkbox"
-            data-target="willpower.{{i}}.value"
+            data-target="legend.value"
             value="{{i}}"
           />
           {{/each}}
