create: adding method to control inputs

--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -99,6 +99,7 @@
           <span>Points:</span><span>{{multiply system.legend.value 4}}</span>
           <input
             type="number"
+            data-action="legend-point-change"
             min="{{system.legendPoints.min}}"
             max="{{system.legendPoints.max}}"
             value="{{system.legendPoints.value}}"
